# Text2SQL

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
frontend/: README.md  REMOVE_LOVABLE_BRANDING_PLAN.md  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/hooks/: useText2SQL.ts
frontend/src/pages/: Home.tsx  Login.tsx  Results.tsx
frontend/src/services/: api.ts
scripts/: setup.sh  start.sh
src/: __main__.py  logging.py  settings.py
src/app/api/: router.py
src/app/api/text2sql_lg_code/: __init__.py  view.py
src/app/services/text2sql_lg_service/: __init__.py  database_client.py  exceptions.py  followup_generator.py  llm_client.py  metadata_loader.py  models.py  service.py  sql_executor.py  sql_generator.py  sql_validator.py  summary_generator.py  workflow_orchestrator.py
src/core/: __init__.py  application.py  lifetime.py
src/middleware/: __init__.py  exception.py
src/notebook/: text2sql.ipynb  text2sql_lg.ipynb
src/notebook/metadata/: causal_inference_metadata.txt
src/utils/: logging.py
