[project]
name = "text2sql-api"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "poetry>=2.2.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "toml>=0.10.2",
    "uvicorn>=0.40.0",
    "yarl>=1.22.0",
]
